[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ship/KeyMaker.gd" type="Script" id=1]
[ext_resource path="res://scenes/ship/key stuff/Fragment.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/helper/FadeNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ship/key stuff/ColourMatcher.gd" type="Script" id=4]
[ext_resource path="res://scenes/ship/FragmentContainer.gd" type="Script" id=5]
[ext_resource path="res://assets/resources/items/specificItems/KEYS/TealKey.tres" type="Resource" id=6]
[ext_resource path="res://assets/resources/items/specificItems/KEYS/GreenKey.tres" type="Resource" id=7]
[ext_resource path="res://assets/resources/items/specificItems/KEYS/FuchsiaKey.tres" type="Resource" id=8]
[ext_resource path="res://assets/resources/items/specificItems/KEYS/RedKey.tres" type="Resource" id=9]
[ext_resource path="res://assets/resources/items/specificItems/KEYS/BlueKey.tres" type="Resource" id=10]
[ext_resource path="res://assets/resources/items/specificItems/KEYS/YellowKey.tres" type="Resource" id=11]

[node name="KeyMaker" type="Control"]
margin_left = 12.0
margin_top = 12.0
margin_right = 231.0
margin_bottom = 204.0
script = ExtResource( 1 )

[node name="FadeNode" parent="." instance=ExtResource( 3 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8

[node name="FragmentContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 219.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
script = ExtResource( 5 )

[node name="Fragment1" parent="VBoxContainer/FragmentContainer" instance=ExtResource( 2 )]
color = Color( 1, 1, 1, 1 )

[node name="Fragment2" parent="VBoxContainer/FragmentContainer" instance=ExtResource( 2 )]
margin_left = 74.0
margin_right = 144.0
color = Color( 1, 1, 1, 1 )

[node name="Fragment3" parent="VBoxContainer/FragmentContainer" instance=ExtResource( 2 )]
margin_left = 148.0
margin_right = 218.0
color = Color( 1, 1, 1, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 219.0
margin_bottom = 192.0
size_flags_horizontal = 3

[node name="FragmentAddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 107.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Add fragment"

[node name="ForgeKeyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 111.0
margin_right = 219.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Forge key"

[node name="ColourMatcher" type="Node" parent="."]
script = ExtResource( 4 )
possibleColors = [ Color( 0, 0, 1, 1 ), Color( 0, 1, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 0, 1 ), Color( 0, 1, 1, 1 ), Color( 1, 0, 1, 1 ) ]
matchingObjects = [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 8 ) ]

[connection signal="fragment_added" from="." to="VBoxContainer/FragmentContainer" method="_on_KeyMaker_fragment_added"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FragmentAddButton" to="." method="_on_FragmentAddButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ForgeKeyButton" to="." method="_on_ForgeKeyButton_pressed"]
